# rag_pipeline_demo

./: .pylintrc  AGENT_IMPROVEMENTS_SUMMARY.md  AGGREGATION_GUIDE.md  APP_UPDATED.md  BEFORE_AFTER_COMPARISON.md  FEATURES.md  FIX_ASIAN_ETHNICITY_QUERY.md  FIX_LANGGRAPH_MIGRATION.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVED_AGENT_GUIDE.md  PYLINT_FIX_SUMMARY.md  QUICK_START.md  README.md  README_TELEMETRY.md  READY_TO_USE.md  TELEMETRY_COMPLETE.md  TELEMETRY_GUIDE.md  TELEMETRY_IMPLEMENTATION.md  TELEMETRY_QUICK_REFERENCE.md  VERIFICATION_REPORT.md  agent_telemetry.py  app.py  app_hybrid.py  app_llamaindex.py  app_tabular.py  data_aggregator.py  data_loader.py  data_loader_llamaindex.py  phase1_brd.md  pyproject.toml  shared_ui.py  shared_validation.py  test_aggregator.py  test_dataset_validation.py  test_langgraph_integration.py  test_telemetry.py
.github/workflows/: pylint.yml
llamaindex_storage/Employee Sample Data 1/: docstore.json  index_store.json
