[project]
name = "rag-pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Core RAG frameworks
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=0.2.0",
    "llama-index>=0.10.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    "llama-index-llms-ollama>=0.2.0",
    # Document processing
    "pypdf>=6.6.2",
    # Data processing
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    # LLM & Embeddings
    "tiktoken>=0.12.0",
    "sentence-transformers>=2.2.0",
    # UI
    "streamlit>=1.28.0",
]
